fix first content block spacing

--- a/css/_content.scss
+++ b/css/_content.scss
@@ -45,6 +45,39 @@
     align-items: center;
 }
 
+@media screen and (min-width:900px) {
+    .culture-img-wrap{
+        padding: 1rem;
+        flex-direction: row;
+        align-items: stretch;
+        img{
+            width: 100%;
+            padding: 0rem;
+        }
+    }
+}
+
+@media screen and (min-width:900px) {
+    .culture-wrap-1{
+        padding: 1rem;
+        flex: 1 1 0px;
+        // flex-shrink: 2;
+        justify-content: space-around;
+    }
+}
+
+@media screen and (min-width:900px) {
+    .culture-wrap-2{
+        padding: 1rem;
+        flex-direction: row;
+        align-items: stretch;
+        width: auto;
+        // flex-shrink: 1;
+        flex: 1 1 0px;
+    }
+}
+
+
 // .culture-img-wrap{
 //     // width: 95%;
 //     display: flex;
