--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ html {
 }
 
 .landing-video-bg {
+  background-color: black;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -143,8 +144,13 @@ html {
   width: auto;
   min-height: auto;
   z-index: -1;
-  -webkit-filter: brightness(50%);
-          filter: brightness(50%);
+}
+
+@media screen and (min-width: 600px) {
+  .landing-video-bg {
+    -webkit-filter: brightness(60%);
+            filter: brightness(60%);
+  }
 }
 
 .landing-content {
@@ -311,6 +317,51 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (min-width: 900px) {
+  .culture-img-wrap {
+    padding: 1rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+  }
+  .culture-img-wrap img {
+    width: 100%;
+    padding: 0rem;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .culture-wrap-1 {
+    padding: 1rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .culture-wrap-2 {
+    padding: 1rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    width: auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0px;
+  }
 }
 
 html::-webkit-scrollbar {
